Changed the title

--- a/CPSC-5210-Research-Project.tex
+++ b/CPSC-5210-Research-Project.tex
@@ -13,7 +13,7 @@
   \texttt{p.s@mocs.utc.edu}
 }
 
-\title{Spatial Clustering in Databases: A Survey}
+\title{Spatial Clustering Algorithm Survey}
 
 \begin{document}
 \maketitle
