Added Eric email.

--- a/CPSC-5210-Research-Project.tex
+++ b/CPSC-5210-Research-Project.tex
@@ -7,7 +7,7 @@
   \texttt{xpq514@mocs.utc.edu}
   \and
   Reinsmidt, Eric\\
-  \texttt{first2.last2@xxxxx.com}
+  \texttt{bgw326@mocs.utc.edu}
   \and
   Sidella, Pallavi\\
   \texttt{p.s@mocs.utc.edu}
