--- a/CPSC-5210-Research-Project.tex
+++ b/CPSC-5210-Research-Project.tex
@@ -10,7 +10,7 @@
   \texttt{bgw326@mocs.utc.edu}
   \and
   Sidella, Pallavi\\
-  \texttt{p.s@mocs.utc.edu}
+  \texttt{mwr177@mocs.utc.edu}
 }
 
 \title{Spatial Clustering Algorithm Survey}
