changes to working_doc.tex

--- a/working_doc.tex
+++ b/working_doc.tex
@@ -356,6 +356,7 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage{qtree}
+\usepackage{url}
 
 \begin{document}
 %
@@ -701,6 +702,45 @@ An acknowledgement statement, if applicable, goes here.
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
+
+\bibitem{IEEEhowto:Xu} R. Xu, D. Wunsch, ``Survey of Clustering Algorithms'', \emph{IEEE Transactions on Neural Networks}, vol. 16, no. 3, May, 2005, available at 
+\url{http://axon.cs.byu.edu/Dan/678/papers/Cluster/Xu.pdf}.
+
+\bibitem{IEEEhowto:Chandra} Chandra E., Anuradha V.P. ``A Survey on Clustering Algorithms for Data in Spatial Database Management Systems'', \emph{International Journal}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``Categorization of Several Clustering Algorithms from Different Perspective: A Review'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``EFFICIENT HIERARCHICAL CLUSTERING OF LARGE DATA SETS USING P-TREES'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``Clustering Algorithms for Spatial Databases: A Survey'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``A Survey on Density Based Clustering Algorithms for Mining Large Spatial Databases'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``A Comparative Study of Various Clustering Algorithms in Data Mining'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``The Mathematics of GIS'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``Literature Survey On Clustering Techniques'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``Fuzzy K-means'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``Extended Fuzzy Clustering Algorithms'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``BIRCH: An Efficient Data Clustering Method for Very Large Databases'', \emph{}, available at
+\url{}
+
+\bibitem{IEEEhowto:Author} F. Last, ``Optimal Grid-Clustering: Towards Breaking the Curse of Dimensionality in High-Dimensional Clustering'', \emph{}, available at
+\url{}  
 
 
 \bibitem{IEEEhowto:eason}
