changes to working_doc

--- a/working_doc.tex
+++ b/working_doc.tex
@@ -515,7 +515,7 @@ waaaaaaay too pixelated even at 300 dpi :(
 \subsection{Fuzzy K-Means}
 
 \section{Assymptotic Evaluation}
-AP-S summary papers are limited to two pages. Any submitted paper that exceeds this limit will be rejected.  The page format is two-column, as illustrated here.  Do not add any kind of pagination anywhere in the paper. Do not manually number the headings - the template will do that for you.
+AP-S summary papers are limited to two pages. Any submitted paper that exceeds this limit will be rejected.  \cite{spatial} The page format is two-column, as illustrated here.  Do not add any kind of pagination anywhere in the paper. Do not manually number the headings - the template will do that for you.
 Please take note of the following items when preparing your paper:
 
 \subsection{DBSCAN}
@@ -703,54 +703,59 @@ An acknowledgement statement, if applicable, goes here.
 % (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
 
-\bibitem{IEEEhowto:Xu} R. Xu, D. Wunsch, ``Survey of Clustering Algorithms'', \emph{IEEE Transactions on Neural Networks}, vol. 16, no. 3, May, 2005, available at 
+\bibitem{survey} R. Xu, D. Wunsch, ``Survey of Clustering Algorithms'', \emph{IEEE Transactions on Neural Networks}, vol. 16, no. 3, May, 2005, available at 
 \url{http://axon.cs.byu.edu/Dan/678/papers/Cluster/Xu.pdf}.
 
-\bibitem{IEEEhowto:Chandra} Chandra E., Anuradha V.P. ``A Survey on Clustering Algorithms for Data in Spatial Database Management Systems'', \emph{International Journal}, available at
-\url{}
+\bibitem{database} Chandra E., Anuradha V.P. ``A Survey on Clustering Algorithms for Data in Spatial Database Management Systems'', \emph{International Journal of Computer Applications}, available at
+\url{http://www.ijcaonline.org/volume24/number9/pxc3873975.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``Categorization of Several Clustering Algorithms from Different Perspective: A Review'', \emph{}, available at
-\url{}
+\bibitem{categorization} N. Soni, A. Ganatra, ``Categorization of Several Clustering Algorithms from Different Perspective: A Review'', \emph{International Journal of Advanced Research in Computer Science and Software Engineering}, vol. 2, iss. 8, August, 2012, available at
+\url{http://www.ijarcsse.com/docs/papers/8_August2012/Volume_2_issue_8/V2I800161.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``EFFICIENT HIERARCHICAL CLUSTERING OF LARGE DATA SETS USING P-TREES'', \emph{}, available at
-\url{}
+\bibitem{efficient} A. Denton, ``EFFICIENT HIERARCHICAL CLUSTERING OF LARGE DATA SETS USING P-TREES'', \emph{unpublished}, available at
+\url{http://www.cs.ndsu.nodak.edu/~adenton/thesis/chapter7_Final.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``Clustering Algorithms for Spatial Databases: A Survey'', \emph{}, available at
-\url{}
+\bibitem{spatial} E. Kolatch, ``Clustering Algorithms for Spatial Databases: A Survey'', \emph{unpublished}, available at
+\url{http://mrl.cecsresearch.org/Resources/papers/Ericasurvey.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``A Survey on Density Based Clustering Algorithms for Mining Large Spatial Databases'', \emph{}, available at
-\url{}
+\bibitem{denisty} M. Parimala, D. Lopez, N.C. Senthilkumar, ``A Survey on Density Based Clustering Algorithms for Mining Large Spatial Databases'', \emph{International Journal of Advanced Science and Technology}, vol. 31, June, 2011, available at
+\url{http://www.sersc.org/journals/IJAST/vol31/5.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``A Comparative Study of Various Clustering Algorithms in Data Mining'', \emph{}, available at
-\url{}
+\bibitem{comparative} M. Verma, M. Srivastava, N. Chack, A. K. Diswar, N. Gupta, ``A Comparative Study of Various Clustering Algorithms in Data Mining'', \emph{International Journal of Engineering Research and Applications}, vol. 2, iss. 3, May-Jun, 2012, pp.1379-1384, available at
+\url{http://www.ijera.com/papers/Vol2_issue3/ID2313791384.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``The Mathematics of GIS'', \emph{}, available at
-\url{}
+\bibitem{math} W. Kainz, ``The Mathematics of GIS'', \emph{ESRI Press}, 2004, available at
+\url{http://homepage.univie.ac.at/wolfgang.kainz/Lehrveranstaltungen/15th_Nordic_Summer_School/The_Mathematics_of_GIS_Draft.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``Literature Survey On Clustering Techniques'', \emph{}, available at
-\url{}
+\bibitem{literature} B.G.O. Reddy, M. Ussenaiah, ``Literature Survey On Clustering Techniques'', \emph{IOSR Journal of Computer Engineering}, vol. 3, iss. 1 (July-Aug. 2012), PP 01-12, available at
+\url{http://iosrjournals.org/iosr-jce/full-issue/vol3-issue1.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``Fuzzy K-means'', \emph{}, available at
-\url{}
+\bibitem{fuzzy} Apache Foundation, ``Fuzzy K-means'', \emph{Apache Mahmout}, available at
+\url{https://cwiki.apache.org/MAHOUT/fuzzy-k-means.html}
 
-\bibitem{IEEEhowto:Author} F. Last, ``Extended Fuzzy Clustering Algorithms'', \emph{}, available at
-\url{}
+\bibitem{extended} U. Kaymak, M SErasmus Research Institute of Managementetnes, ``Extended Fuzzy Clustering Algorithms'', \emph{Erasmus Research Institute of Management}, available at
+\url{http://repub.eur.nl/res/pub/57/erimrs20001123094510.pdf}
 
-\bibitem{IEEEhowto:Author} F. Last, ``BIRCH: An Efficient Data Clustering Method for Very Large Databases'', \emph{}, available at
-\url{}
+\bibitem{birch} T. Zhang, R. Ramakrishnan, M. Livny, ``BIRCH: An Efficient Data Clustering Method for Very Large Databases'', \emph{SIGMOD ’96}, available at
+\url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.17.2504}
 
-\bibitem{IEEEhowto:Author} F. Last, ``Optimal Grid-Clustering: Towards Breaking the Curse of Dimensionality in High-Dimensional Clustering'', \emph{}, available at
-\url{}  
+\bibitem{optimal} A. Hinneburg, D.A. Keim, ``Optimal Grid-Clustering: Towards Breaking the Curse of Dimensionality in High-Dimensional Clustering'', \emph{unpublished}, 1999, available at
+\url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.44.4721&rep=rep1&type=pdf}  
 
+                                             
+\bibitem{data} C. Döring, M. J. Lesot, and R. Kruse, ``Data analysis with fuzzy clustering methods'', \emph{Computational Statistics and Data Analysis},2006, pp. 192-214.
 
-\bibitem{IEEEhowto:eason}
-G. Eason, B. Noble, and I. N. Sneddon, ``On certain integrals of Lipschitz-Hankel type involving products of Bessel functions'', \emph{Phil. Trans. Roy. Soc. London}, vol. A247, pp. 529-551, April 1955.
+\bibitem{pattern} J. C. Bezdek ``Pattern Recognition with Fuzzy Objective Function Algorithm'', \emph{Press, New York}, 1981.
 
-\bibitem{IEEEhowto:maxwell}
-J. Clerk Maxwell, \emph{A Treatise on Electricity and Magnetism, 3rd ed., vol. 2}. Oxford: Clarendon, 1892, pp. 68-73.
+\bibitem{suppressed} J. L. Fan, W. Z. Zhen, and W. X. Xie, ``Suppressed fuzzy c-means clustering algorithm'', \emph{ Recognition Letters}, 2003, pp. 1607-1612.
 
-\bibitem{IEEEhowto:doe}
-J. Doe, ``Title of paper if known'', unpublished. 
+\bibitem{kmeans} C-T Chang, J.Z.C. Lai and M-D Jeng, ``A Fuzzy K-means clustering algorithm  using cluster center displacement'', \emph{Journal of information science and engineering} 27, 995-1009, 2011.
+
+\bibitem{efficient} R. L. Cannon, J. V. Dave, and J. C. Bezdek, ``Efficient implementation of the fuzzy c- means clustering algorithm'', \emph{IEEE Transactions on PAMI}, Vol. 8, 1986, pp. 248-255.
+
+\bibitem{oberst} Jan Oberst, ``BIRCH'', \emph{Github.com}, available at
+\url{https://github.com/janoberst/BIRCH/blob/master/birch.py}
+
 \end{thebibliography}
 
 
