--- a/working_doc.tex
+++ b/working_doc.tex
@@ -359,7 +359,7 @@ Our primary motivation for undertaking this study is to test the reliability of 
 \begin{itemize}
   \item BIRCH
   \item DBSCAN
-  \item Fuzzy k-Means
+  \item Fuzzy K-Means
 \end{itemize}
 \vspace{1 mm}
 Our research involves determining which of the selected algorithms provides the most efficient estimated runtime and most efficient experimental runtime in a real-world implementation with regard to spatial-specific metrics including:
@@ -403,13 +403,13 @@ The BIRCH algorithm consists of four phases, two of which are optional:
 \end{algorithm}
 
 \begin{center}
-\includegraphics[width=90mm]{cf_tree.png}
-\end{center}
+\includegraphics[width=90mm]{cf_tree.png}\end{center}
 
-%==================================
+%==================================% 
 % DBSCAN ALGORITHM
 %==================================
 \subsection{DBSCAN}
+Intro about DBSCAN here, blah, blah, blah
 
 \begin{algorithm}
 \caption{DBSCAN}
@@ -436,7 +436,7 @@ The BIRCH algorithm consists of four phases, two of which are optional:
 % FUZZY K-MEANS ALGORITHM
 %==================================
 \subsection{Fuzzy K-Means}
-Fuzzy k-means clustering (FKM) algorithm is an unsupervised clustering algorithm which can be
+Fuzzy K-Means clustering (FKM) algorithm is an unsupervised clustering algorithm which can be
 applied to wide range of applications like medical imaging, agricultural engineering, astronomy,
 geology, shape analysis, chemistry and many more applications \cite{pattern}. FKM performs iteratively the partition step until convergence. Extensive computations which are usually required to generate cluster representatives can be accomplished through the iteration process. FKM algorithm partitions data points into $k$ clusters
 
@@ -488,20 +488,17 @@ disk for every iteration, thus increasing the input/output complexity $O(ndi)$.
 \begin{equation}
 \alpha+\beta=\chi
 \end{equation}
-                
-\subsection{Figures and Tables}
-Place each figure and/or table within the width of a single column, as illustrated by Fig. 1 and Table I below. Large figures and tables may span across both columns. Figure captions should be below the figures; table headings should appear above the tables. Insert figures and tables after they are cited in the text.
-
-% \begin{figure}[h]
-% \begin{center}
-% \noindent
-%   \includegraphics[width=3in]{Fig1}
-%   \caption{Example of a figure caption.}\label{Fig1Label}
-% \end{center}
-% \end{figure}
 
 \section{Empirical Evaluation}
+TALK ABOUT OUR TESTING METHOD HERE
 
+\subsection{Testing Environment}
+\begin{center}
+Intel Core i7 @ 2.3GHz per core\\*
+16GB DDR3 @ 1600MHz
+\end{center}
+
+\subsection{Results}
 
 \begin{table}[h]
 \begin{center}
@@ -596,118 +593,8 @@ Place each figure and/or table within the width of a single column, as illustrat
 \end{tikzpicture}
 \end{center}
 
-\subsection{Testing Environment}
-\begin{center}
-Intel Core i7 @ 2.3GHz per core\\*
-16GB DDR3 @ 1600MHz
-\end{center}
-
-\subsection{Results}
 \section{Discussion and Conclusion}
-
-% use section* for acknowledgement
-\section*{ACKNOWLEDGEMENT}
-An acknowledgement statement, if applicable, goes here.
-
-
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex,
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation Results}
-%\label{fig_sim}
-%\end{figure}
-
-% Note that IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
-
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command, the
-% \label for the overall figure must come after \caption.
-% \hfil must be used as a separator to get equal spacing.
-% The subfigure.sty package works much the same way, except \subfigure is
-% used instead of \subfloat.
-%
-%\begin{figure*}[!t]
-%\centerline{\subfloat[Case I]\includegraphics[width=2.5in]{subfigcase1}%
-%\label{fig_first_case}}
-%\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{subfigcase2}%
-%\label{fig_second_case}}}
-%\caption{Simulation results}
-%\label{fig_sim}
-%\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
-
-
-% An example of a floating table. Note that, for IEEE style tables, the
-% \caption command should come BEFORE the table. Table text will default to
-% \footnotesize as IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
-%
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
-
-
-% Note that IEEE does not put floats in the very first column - or typically
-% anywhere on the first page for that matter. Also, in-text middle ("here")
-% positioning is not used. Most IEEE journals/conferences use top floats
-% exclusively. Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the \fnbelowfloat
-% command of the stfloats package.
-
-
-
-
-
-
-
-
-% conference papers do not normally have an appendix
-
-
-
-
-
-
-
-
+Stuff here about what we learned, etc.
 
 \begin{thebibliography}{1}
 
@@ -739,7 +626,7 @@ An acknowledgement statement, if applicable, goes here.
 \url{http://iosrjournals.org/iosr-jce/full-issue/vol3-issue1.pdf}
 
 \bibitem{fuzzy} Apache Foundation, ``Fuzzy K-means'', \emph{Apache Mahmout}, available at
-\url{https://cwiki.apache.org/MAHOUT/fuzzy-k-means.html}
+\url{https://cwiki.apache.org/MAHOUT/fuzzy-K-Means.html}
 
 \bibitem{extended} U. Kaymak, M SErasmus Research Institute of Managementetnes, ``Extended Fuzzy Clustering Algorithms'', \emph{Erasmus Research Institute of Management}, available at
 \url{http://repub.eur.nl/res/pub/57/erimrs20001123094510.pdf}
