--- a/working_doc.tex
+++ b/working_doc.tex
@@ -50,274 +50,7 @@
 % The testflow support page is at:
 % http://www.michaelshell.org/tex/testflow/
 
-
-
-% Note that the a4paper option is mainly intended so that authors in
-% countries using A4 can easily print to A4 and see how their papers will
-% look in print - the typesetting of the document will not typically be
-% affected with changes in paper size (but the bottom and side margins will).
-% Use the testflow package mentioned above to verify correct handling of
-% both paper sizes by the user's LaTeX system.
-%
-% Also note that the "draftcls" or "draftclsnofoot", not "draft", option
-% should be used if it is desired that the figures are to be displayed in
-% draft mode.
-%
 \documentclass[conference, 10pt]{IEEEtran}
-% Add the compsoc option for Computer Society conferences.
-%
-% If IEEEtran.cls has not been installed into the LaTeX system files,
-% manually specify the path to it like:
-% \documentclass[conference]{../sty/IEEEtran}
-
-
-
-
-
-% Some very useful LaTeX packages include:
-% (uncomment the ones you want to load)
-
-
-% *** MISC UTILITY PACKAGES ***
-%
-%\usepackage{ifpdf}
-% Heiko Oberdiek's ifpdf.sty is very useful if you need conditional
-% compilation based on whether the output is pdf or dvi.
-% usage:
-% \ifpdf
-%   % pdf code
-% \else
-%   % dvi code
-% \fi
-% The latest version of ifpdf.sty can be obtained from:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/oberdiek/
-% Also, note that IEEEtran.cls V1.7 and later provides a builtin
-% \ifCLASSINFOpdf conditional that works the same way.
-% When switching from latex to pdflatex and vice-versa, the compiler may
-% have to be run twice to clear warning/error messages.
-
-
-
-
-
-
-% *** CITATION PACKAGES ***
-%
-%\usepackage{cite}
-% cite.sty was written by Donald Arseneau
-% V1.6 and later of IEEEtran pre-defines the format of the cite.sty package
-% \cite{} output to follow that of IEEE. Loading the cite package will
-% result in citation numbers being automatically sorted and properly
-% "compressed/ranged". e.g., [1], [9], [2], [7], [5], [6] without using
-% cite.sty will become [1], [2], [5]--[7], [9] using cite.sty. cite.sty's
-% \cite will automatically add leading space, if needed. Use cite.sty's
-% noadjust option (cite.sty V3.8 and later) if you want to turn this off.
-% cite.sty is already installed on most LaTeX systems. Be sure and use
-% version 4.0 (2003-05-27) and later if using hyperref.sty. cite.sty does
-% not currently provide for hyperlinked citations.
-% The latest version can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/cite/
-% The documentation is contained in the cite.sty file itself.
-
-
-
-
-
-
-% *** GRAPHICS RELATED PACKAGES ***
-%
-\ifCLASSINFOpdf
-  % \usepackage[pdftex]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../pdf/}{../jpeg/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
-\else
-  % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
-  % will default to the driver specified in the system graphics.cfg if no
-  % driver is specified.
-  % \usepackage[dvips]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../eps/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.eps}
-\fi
-% graphicx was written by David Carlisle and Sebastian Rahtz. It is
-% required if you want graphics, photos, etc. graphicx.sty is already
-% installed on most LaTeX systems. The latest version and documentation can
-% be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/graphics/
-% Another good source of documentation is "Using Imported Graphics in
-% LaTeX2e" by Keith Reckdahl which can be found as epslatex.ps or
-% epslatex.pdf at: http://www.ctan.org/tex-archive/info/
-%
-% latex, and pdflatex in dvi mode, support graphics in encapsulated
-% postscript (.eps) format. pdflatex in pdf mode supports graphics
-% in .pdf, .jpeg, .png and .mps (metapost) formats. Users should ensure
-% that all non-photo figures use a vector format (.eps, .pdf, .mps) and
-% not a bitmapped formats (.jpeg, .png). IEEE frowns on bitmapped formats
-% which can result in "jaggedy"/blurry rendering of lines and letters as
-% well as large increases in file sizes.
-%
-% You can find documentation about the pdfTeX application at:
-% http://www.tug.org/applications/pdftex
-
-
-
-
-
-% *** MATH PACKAGES ***
-%
-%\usepackage[cmex10]{amsmath}
-% A popular package from the American Mathematical Society that provides
-% many useful and powerful commands for dealing with mathematics. If using
-% it, be sure to load this package with the cmex10 option to ensure that
-% only type 1 fonts will utilized at all point sizes. Without this option,
-% it is possible that some math symbols, particularly those within
-% footnotes, will be rendered in bitmap form which will result in a
-% document that can not be IEEE Xplore compliant!
-%
-% Also, note that the amsmath package sets \interdisplaylinepenalty to 10000
-% thus preventing page breaks from occurring within multiline equations. Use:
-%\interdisplaylinepenalty=2500
-% after loading amsmath to restore such page breaks as IEEEtran.cls normally
-% does. amsmath.sty is already installed on most LaTeX systems. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/amslatex/math/
-
-
-
-
-
-% *** SPECIALIZED LIST PACKAGES ***
-%
-%\usepackage{algorithmic}
-% algorithmic.sty was written by Peter Williams and Rogerio Brito.
-% This package provides an algorithmic environment fo describing algorithms.
-% You can use the algorithmic environment in-text or within a figure
-% environment to provide for a floating algorithm. Do NOT use the algorithm
-% floating environment provided by algorithm.sty (by the same authors) or
-% algorithm2e.sty (by Christophe Fiorio) as IEEE does not use dedicated
-% algorithm float types and packages that provide these will not provide
-% correct IEEE style captions. The latest version and documentation of
-% algorithmic.sty can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/algorithms/
-% There is also a support site at:
-% http://algorithms.berlios.de/index.html
-% Also of interest may be the (relatively newer and more customizable)
-% algorithmicx.sty package by Szasz Janos:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/algorithmicx/
-
-
-
-
-% *** ALIGNMENT PACKAGES ***
-%
-%\usepackage{array}
-% Frank Mittelbach's and David Carlisle's array.sty patches and improves
-% the standard LaTeX2e array and tabular environments to provide better
-% appearance and additional user controls. As the default LaTeX2e table
-% generation code is lacking to the point of almost being broken with
-% respect to the quality of the end results, all users are strongly
-% advised to use an enhanced (at the very least that provided by array.sty)
-% set of table tools. array.sty is already installed on most systems. The
-% latest version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/tools/
-
-
-%\usepackage{mdwmath}
-%\usepackage{mdwtab}
-% Also highly recommended is Mark Wooding's extremely powerful MDW tools,
-% especially mdwmath.sty and mdwtab.sty which are used to format equations
-% and tables, respectively. The MDWtools set is already installed on most
-% LaTeX systems. The lastest version and documentation is available at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/mdwtools/
-
-
-% IEEEtran contains the IEEEeqnarray family of commands that can be used to
-% generate multiline equations as well as matrices, tables, etc., of high
-% quality.
-
-
-%\usepackage{eqparbox}
-% Also of notable interest is Scott Pakin's eqparbox package for creating
-% (automatically sized) equal width boxes - aka "natural width parboxes".
-% Available at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/eqparbox/
-
-
-
-
-
-% *** SUBFIGURE PACKAGES ***
-%\usepackage[tight,footnotesize]{subfigure}
-% subfigure.sty was written by Steven Douglas Cochran. This package makes it
-% easy to put subfigures in your figures. e.g., "Figure 1a and 1b". For IEEE
-% work, it is a good idea to load it with the tight package option to reduce
-% the amount of white space around the subfigures. subfigure.sty is already
-% installed on most LaTeX systems. The latest version and documentation can
-% be obtained at:
-% http://www.ctan.org/tex-archive/obsolete/macros/latex/contrib/subfigure/
-% subfigure.sty has been superceeded by subfig.sty.
-
-
-
-%\usepackage[caption=false]{caption}
-%\usepackage[font=footnotesize]{subfig}
-% subfig.sty, also written by Steven Douglas Cochran, is the modern
-% replacement for subfigure.sty. However, subfig.sty requires and
-% automatically loads Axel Sommerfeldt's caption.sty which will override
-% IEEEtran.cls handling of captions and this will result in nonIEEE style
-% figure/table captions. To prevent this problem, be sure and preload
-% caption.sty with its "caption=false" package option. This is will preserve
-% IEEEtran.cls handing of captions. Version 1.3 (2005/06/28) and later
-% (recommended due to many improvements over 1.2) of subfig.sty supports
-% the caption=false option directly:
-%\usepackage[caption=false,font=footnotesize]{subfig}
-%
-% The latest version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/subfig/
-% The latest version and documentation of caption.sty can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/caption/
-
-
-
-
-% *** FLOAT PACKAGES ***
-%
-%\usepackage{fixltx2e}
-% fixltx2e, the successor to the earlier fix2col.sty, was written by
-% Frank Mittelbach and David Carlisle. This package corrects a few problems
-% in the LaTeX2e kernel, the most notable of which is that in current
-% LaTeX2e releases, the ordering of single and double column floats is not
-% guaranteed to be preserved. Thus, an unpatched LaTeX2e can allow a
-% single column figure to be placed prior to an earlier double column
-% figure. The latest version and documentation can be found at:
-% http://www.ctan.org/tex-archive/macros/latex/base/
-
-
-
-%\usepackage{stfloats}
-% stfloats.sty was written by Sigitas Tolusis. This package gives LaTeX2e
-% the ability to do double column floats at the bottom of the page as well
-% as the top. (e.g., "\begin{figure*}[!b]" is not normally possible in
-% LaTeX2e). It also provides a command:
-%\fnbelowfloat
-% to enable the placement of footnotes below bottom floats (the standard
-% LaTeX2e kernel puts them above bottom floats). This is an invasive package
-% which rewrites many portions of the LaTeX2e float routines. It may not work
-% with other packages that modify the LaTeX2e float routines. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/sttools/
-% Documentation is contained in the stfloats.sty comments as well as in the
-% presfull.pdf file. Do not use the stfloats baselinefloat ability as IEEE
-% does not allow \baselineskip to stretch. Authors submitting work to the
-% IEEE should note that IEEE rarely uses double column equations and
-% that authors should try to avoid such use. Do not be tempted to use the
-% cuted.sty or midfloat.sty packages (also by Sigitas Tolusis) as IEEE does
-% not format its papers in such ways.
 
 \usepackage{graphicx}
 \usepackage{color}
@@ -329,6 +62,24 @@
 \usepackage{qtree}
 \usepackage{url}
 \usepackage{pgfplots}
+\usepackage[section,subsection]{extraplaceins}
+\usepackage{tikz}
+\usetikzlibrary{shadings}
+\definecolor{eggshell}{RGB}{252,230,201}
+\pgfdeclareradialshading{eggshading}{\pgfpoint{1cm}{1cm}}%
+{color(0cm)=(eggshell!80);
+color(0.5cm)=(brown!75!eggshell);
+color(0.7cm)=(brown);
+color(0.9cm)=(brown!70!black);
+color(1.2cm)=(black)
+}
+\pgfdeclareradialshading{eggshadow}{\pgfpointorigin}%
+{color(0cm)=(black);
+color(2mm)=(gray!80);
+color(3mm)=(gray!40);
+%color(0.3cm)=(black!5!white);
+color(7mm)=(white)
+}
 
 \begin{document}
 %
@@ -354,7 +105,7 @@ Chattanooga, Tennessee, U.S.A.\\}}
 \begin{abstract}
 %\boldmath
 % Please include a brief abstract here. The abstract should be limited to 50-200 words and should concisely state what was done, how it was done, principal results, and their significance.
-Our primary motivation for undertaking this study is to test the reliability of an algorithm's theoretically estimated running time and the experimental results that follow. Secondary considerations are pursuing algorithms that operate on relevant themes emerging in computer science such as massive datasets. The following algorithms will be implemented and evaluated:
+Our primary motivation for undertaking this study is to test the reliability of an algorithm's theoretically estimated running time and the experimental results that follow. Secondary considerations are pursuing algorithms that operate on relevant themes emerging in computer science such as massive data sets. The following algorithms will be implemented and evaluated:
 \vspace{1 mm}
 \begin{itemize}
   \item BIRCH
@@ -371,6 +122,7 @@ Our research involves determining which of the selected algorithms provides the 
   \item Independence of the data input order
 \end{itemize}
 \vspace{1 mm}
+The algorithms were evaluated using a data set from the National Oceanic and Atmospheric Administration (NOAA), which was comprised of hail storm data from 1955 - 2011. The evaluation consisted of running the algorithms on steadily reduced subsets of the NOAA data set, and recording their run time for each subset. The theoretical growth rates of the different algorithms do indeed line up with their real world growth rates.
 
 \end{abstract}
 
@@ -382,7 +134,7 @@ Due to advances in scientific data collection, we now have large and continuousl
 %==================================
 \subsection{BIRCH}
 
-The Balanced Iterative Reducing and Clustering using Hierarchies (BIRCH) algorithm was conceived of as a way to balance the need to cluster extremely large datasets in situations where time and memory are limited. To achieve the time requirement, BIRCH only scans a dataset one time, which improves the rumtime efficiency. While it may be counterintuitive that it only scans a dataset one time while also having a memory restricted system, BIRCH accomplishes this by building a Clustering Feature Tree (CF Tree) that can cluster data in chunks as it is scanned piecemeal \cite{birch}.
+The Balanced Iterative Reducing and Clustering using Hierarchies (BIRCH) algorithm was conceived of as a way to balance the need to cluster extremely large data sets in situations where time and memory are limited. To achieve the time requirement, BIRCH only scans a data set one time, which improves the rumtime efficiency. While it may be counterintuitive that it only scans a data set one time while also having a memory restricted system, BIRCH accomplishes this by building a Clustering Feature Tree (CF Tree) that can cluster data in chunks as it is scanned piecemeal \cite{birch}.
 
 The BIRCH algorithm consists of four phases, two of which are optional:
 \vspace{1 mm}
@@ -394,22 +146,69 @@ The BIRCH algorithm consists of four phases, two of which are optional:
 \end{enumerate}
 \vspace{1 mm}
 
+The heart of the BIRCH algorithm is the CF Tree, which is a dendrogram comprised of internal nodes and leaf nodes. The CF Tree's nodes are comprised of three pieces of data:\vspace{1 mm}
+$N$, the total number of objects in the node\\*
+$LS$, the linear sum of the $N$ data points\\*
+For internal nodes
+\begin{equation}
+\overrightarrow{LS} = \sum_{i=1}^{k}\overrightarrow{LS}\:\:of\:\:N_i
+\end{equation}
+For leaf nodes
+\begin{equation}
+LS = \sum_{P_i\epsilon N}^{ }P_i
+\end{equation}
+$SS$, the square sum of the $N$ data points\\*
+For internal nodes
+\begin{equation}
+SS = \sum_{i=1}^{k}SS\:\:of\:\:N_i
+\end{equation}
+For leaf nodes
+\begin{equation}
+SS = \sum_{P_i\epsilon N}^{ }\left | P_i\right |^2
+\end{equation}
+
+\begin{figure}[!hb]
+    \centering
+    \includegraphics[width=90mm]{cf_tree.png}
+    \caption{CF Tree Example}
+\end{figure}
+
+Beyond the CF Tree, BIRCH has more important elements:\vspace{1 mm}
+$B$ the branching factor, i.e how many children an internal node can have\\*
+$T$ the threshold, i.e. how many CF data points are allowed in a node\\*
+$L$ the leaf threshold, i.e. how many CF data points are allowed in a leaf node\\*
+
 \begin{algorithm}
 \caption{BIRCH}
 \begin{algorithmic}[1]
-\Procedure{Birch}{$add, inputs, here$}
-\EndProcedure
+  \Procedure{BirchTreeBuilder}{}\Comment{Phase 1}
+    \State Input: $D$ (set with $n$ points), $root$ (root of CF Tree)
+    \State Output: CF Tree
+    \For{$i\gets 1, n$}
+      \State{Insert value $i$ into $root$}
+      \If{$i$ closest to current node}
+        \State{insert $i$ into current node}
+        \Else
+        \State{check $i$ against node's children}
+      \EndIf
+    \EndFor
+  \EndProcedure
 \end{algorithmic}
 \end{algorithm}
-
-\begin{center}
-\includegraphics[width=90mm]{cf_tree.png}\end{center}
 
 %==================================% 
 % DBSCAN ALGORITHM
 %==================================
 \subsection{DBSCAN}
-Intro about DBSCAN here, blah, blah, blah
+Intro about DBSCAN here, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, brown 
+\begin{tikzpicture}
+\begin{scope}[yscale=0.93,transform shape]
+    \node[xscale=2,yscale=0.3,shading=eggshadow,circle,minimum size=7mm] at (0,2.75mm){};
+    \shade[shading=eggshading] (0,2.7mm)..controls (9mm,0.25cm) and (7mm,2cm)%
+    ..(0,20.5mm)..controls(-7mm,2cm) and (-9mm,2.5mm)..(0,2.7mm)--cycle;
+\end{scope}
+\end{tikzpicture}
+egg, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah, blah
 
 \begin{algorithm}
 \caption{DBSCAN}
@@ -470,10 +269,21 @@ geology, shape analysis, chemistry and many more applications \cite{pattern}. FK
 \section{Asymptotic Evaluation}
 
 \subsection{BIRCH}
+The intial instantiation of the CF Tree has a runtime of $O(n)$, as the BIRCH algorithm has to only read in each data point one time. This is possible by BIRCH's ability to use local clustering in the tree, with refactoring of the tree if the memory space gets filled.
+
+The custom hierarchical agglomerative clustering algorithm used in phase three has a run time of $O(n^2)$, an improvement over a normal runtime of $O(n^3)$ for most hierarchical agglomerative clustering algorithms.
+
+This gives BIRCH overall a run time of $O(n+n^2)$, or rather $O(n^2)$.
 \subsection{DBSCAN}
+XXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+XXXX ADD YOUR GOODS HERE XXXX
+XXXX ADD YOUR GOODS HERE XXXX
+XXXX ADD YOUR GOODS HERE XXXX
+XXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
 \subsection{Fuzzy K-Means}
 The asymptotic efficiency of FKM algorithm has the following notations:\\*
-$i$ number of iterations over the entire dataset\\*
+$i$ number of iterations over the entire data set\\*
 $n$ number of data points in the data set\\*
 $c$ number of clusters\\*
 $d$ number of dimension in the data set\\*
@@ -484,10 +294,6 @@ The space complexity of FKM algorithm is $O(nd+nc$), where $nd$ is the size of t
 
 For large data sets, which cannot be fully loaded into the memory, FKM algorithm will access
 disk for every iteration, thus increasing the input/output complexity $O(ndi)$.
-
-\begin{equation}
-\alpha+\beta=\chi
-\end{equation}
 
 \section{Empirical Evaluation}
 TALK ABOUT OUR TESTING METHOD HERE
@@ -531,16 +337,16 @@ Intel Core i7 @ 2.3GHz per core\\*
 \end{center}
 \end{table}
 
-% (150000,155.195909)
-% (75000,74.441829)
-% (37500,38.501281)
-% (18750,19.471102)
-% (9375,9.723024)
-% (4688,4.771375)
-% (2344,2.414930)
-% (1172,1.214021)
-% (586,0.640441)
-% (297,0.338978)
+% (150000,)
+% (75000,)
+% (37500,)
+% (18750,)
+% (9375,)
+% (4688,)
+% (2344,)
+% (1172,)
+% (586,)
+% (297,)
 
 
 \begin{center}
@@ -548,6 +354,8 @@ Intel Core i7 @ 2.3GHz per core\\*
 \begin{axis}[
     height=9cm,
     width=9cm,
+    xlabel={seconds},
+    ylabel={data points in thousands},
     grid=major,
   ]
   \addplot coordinates {
@@ -588,7 +396,7 @@ Intel Core i7 @ 2.3GHz per core\\*
     (586,0.640441)
     (297,0.338978)
   };
-  \addlegendentry{FuzzyKmeans}
+  \addlegendentry{Fuzzy K-Means}
 \end{axis}
 \end{tikzpicture}
 \end{center}
@@ -628,7 +436,7 @@ Stuff here about what we learned, etc.
 \bibitem{fuzzy} Apache Foundation, ``Fuzzy K-means'', \emph{Apache Mahmout}, available at
 \url{https://cwiki.apache.org/MAHOUT/fuzzy-K-Means.html}
 
-\bibitem{extended} U. Kaymak, M SErasmus Research Institute of Managementetnes, ``Extended Fuzzy Clustering Algorithms'', \emph{Erasmus Research Institute of Management}, available at
+\bibitem{extended} U. Kaymak, M. Setnes, ``Extended Fuzzy Clustering Algorithms'', \emph{Erasmus Research Institute of Management}, available at
 \url{http://repub.eur.nl/res/pub/57/erimrs20001123094510.pdf}
 
 \bibitem{birch} T. Zhang, R. Ramakrishnan, M. Livny, ``BIRCH: An Efficient Data Clustering Method for Very Large Databases'', \emph{SIGMOD ’96}, available at
